syntax = "proto3";
package doxchain.abs;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "doxchain/x/abs/types";

message WatchlistEntry {
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];
  uint64 blockHeight = 2 [(gogoproto.moretags) = "yaml:\"blockheight\""];
  repeated cosmos.base.v1beta1.Coin coins = 3 [(gogoproto.moretags) = "yaml:\"coins\""];
}
